--- a/MyProject/web/assets/css/style.css
+++ b/MyProject/web/assets/css/style.css
@@ -14,7 +14,8 @@ html{
 }
 
 body{
-    margin: 10px auto
+    margin: auto;
+    padding: 0 3%
 }
 
 a {
@@ -22,10 +23,10 @@ a {
     text-decoration: none;
 }
 
-    a:hover {
-        color: #f4a460;
-        text-decoration: none;
-    }
+a:hover {
+    color: #f4a460;
+    text-decoration: none;
+}
 
 
 table {
